--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@
     top: 25%;
     left: 50%;
     text-align: center;
-    transform: translate(-50%, -25%);
-    -webkit-transform: translate(-50%, -25%);
+    line-height: normal;
+    transform: translate(-50%, 0%);
+    -webkit-transform: translate(-50%, 0%);
 }
 
 #search img {
@@ -14,11 +15,12 @@
 
 input[type="text"] {
     margin-top: 1em;
-    width: 550px;
+    width: 70%;
     height: 25px;
     font-size: 110%;
-    border: solid 1px #b0b0b0;
-    -webkit-transition: border 0.1s;
+    border: solid 1px #bababa;
+    border-top-color: #a5a5a5;
+    -webkit-transition: border 0.2s;
 }
 
 input[type="text"]:hover {
@@ -28,4 +30,24 @@ input[type="text"]:hover {
 input[type="text"]:focus {
     border: solid 1px #4f99ff;
     outline: none;
+}
+
+button[type="submit"] {
+    margin: 1.5em 0.5em;
+    font-size: 66%;
+    font-weight: bold;
+    color: #424242;
+    border: solid 1px #ddd;
+    border-radius: 1px;
+    height: 2.5em;
+    background: #f0f0f0;
+    -webkit-transition: border 0.2s;
+    -webkit-transition: color 0.2s;
+    -webkit-transition: box-shadow 0.2s;
+}
+
+button[type="submit"]:hover {
+    border: solid 1px #bbb;
+    box-shadow: 0px 1px 3px #ddd;
+    color: black;
 }
