--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+html, body {
+    position: fixed;
+    font-family: arial;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+}
 #search {
     position: absolute;
     width: 800px;
@@ -6,7 +14,34 @@
     text-align: center;
     line-height: normal;
     transform: translate(-50%, 0%);
-    -webkit-transform: translate(-50%, 0%);
+    -webkit-transform: translate(-50%);
+}
+
+#nav {
+    position: fixed;
+    top: 0;
+    right: 0;
+}
+
+#nav img {
+    padding: 0 0.25em;
+    opacity: 0.5;
+    -webkit-transition: opacity 0.2s;
+}
+
+#nav button {
+    margin: 0;
+    padding: 0 0.75em;
+    letter-spacing: -1px;
+    font-weight: 900;
+    font-size: 14px;
+    color: white;
+    background: #2979FF;
+    border-radius: 2px;
+    border: solid;
+    border-color: #2979FF;
+    height: 2.25em;
+    -webkit-transition: box-shadow 0.2s;
 }
 
 #search img {
@@ -50,4 +85,36 @@ button[type="submit"]:hover {
     border: solid 1px #bbb;
     box-shadow: 0px 1px 3px #ddd;
     color: black;
+}
+
+ul {
+    list-style-type: none;
+    overflow: hidden;
+    float: right;
+    vertical-align: middle;
+    margin-top: 0.75em;
+    margin-right: 0.75em;
+    padding: .25em .75em;
+}
+
+li {
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 0.80em;
+    line-height: 100%;
+    margin-right: 0.5em;
+    padding: 0 0.25em;
+    -webkit-transition: text-decoration;
+}
+
+li:hover {
+    text-decoration: underline;
+}
+
+#nav button:hover {
+    box-shadow: 0px 1px 1px 0px rgba(71,137,229,0.5);
+}
+
+#nav img:hover {
+    opacity: 1.0;
 }
