--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ html, body {
     left:0;
     right:0;
 }
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
 #search {
     position: absolute;
     width: 800px;
